--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.11",
+    "stripe": "^8.215.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"http://localhost:5000/api/"
+  },
+  "proxy": "http://localhost:5000/api/"
 }
